<resources>
    <string name="app_name">Home Inventory</string>
    <string name="title_activity_main">Home Inventory</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Inventory Management</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_scan">Scan…</string>
    <string name="menu_inventory">Inventory</string>
    <string name="menu_shelves">Shelves</string>
    <string name="menu_shopping_list">Shopping List</string>
    <string name="menu_login">Login</string>

    <string name="scan_barcode">Scan a shelf to view its contents or scan an item…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_test">Test Test</string>

    <string name="server">server</string>
    <string name="email">email</string>
    <string name="token">token</string>

    <string name="signed_out">Signed Out</string>
    <string name="down_arrow">▼</string>
    <string name="up_arrow">▲</string>
    <string name="sign_out">Sign Out</string>
    <string name="maximum">Maximum:</string>
    <string name="quantity">Quantity:</string>
    <string name="description">Description:</string>
    <string name="barcodes">Barcodes</string>
    <string name="shelves">Shelves</string>
    <string name="update_item">Update Item</string>

    <string name="quant_val">x%1$s</string>
    <string name="deleteSymbol">✖</string>
    <string name="print_barcodes">Print Barcodes...</string>
</resources>