<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/loginFragment"
            android:title="@string/menu_login"
            android:visible="false" />

        <item
            android:id="@+id/signoutLink"
            android:title="@string/sign_out"
            android:visible="false" />

        <item
            android:visible="false"
            android:id="@+id/scanFragment"
            android:title="@string/menu_scan" />
        <item
            android:visible="false"
            android:id="@+id/shelvesFragment"
            android:title="@string/menu_shelves" />
        <item
            android:visible="false"
            android:id="@+id/inventoryFragment"
            android:title="@string/menu_inventory" />
        <item
            android:id="@+id/shoppingList"
            android:title="@string/menu_shopping_list"/>
    </group>
</menu>