<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ItemFragment">

    <TextView
        android:id="@+id/descriptionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        app:layout_constraintBottom_toTopOf="@id/editMinimum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine|text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/minimumView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Minimum:"
        app:layout_constraintBottom_toTopOf="@id/editMaximum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editDescription" />

    <EditText
        android:id="@+id/editMinimum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editDescription" />

    <TextView
        android:id="@+id/maximumView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maximum"
        app:layout_constraintBottom_toBottomOf="@+id/editMaximum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editMinimum" />

    <EditText
        android:id="@+id/editMaximum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editMinimum" />

    <TextView
        android:id="@+id/quantDescView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/quantity"
        app:layout_constraintBottom_toTopOf="@id/barcodeView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editMaximum"
        tools:layout_constraintTop_toBottomOf="@id/editMaximum" />

    <TextView
        android:id="@+id/quantityView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editMaximum" />

    <TextView
        android:id="@+id/barcodeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/barcodes"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/barcodeScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quantDescView"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/barcodeScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/shelfView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barcodeView">

        <LinearLayout
            android:id="@+id/barcodeLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <TextView
        android:id="@+id/shelfView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shelves"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/shelfScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barcodeScrollView" />

    <ScrollView
        android:id="@+id/shelfScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/updateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shelfView">

        <LinearLayout
            android:id="@+id/shelfLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shelfScrollView" />

    <Button
        android:id="@+id/itemDeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/deleteSymbol"
        android:textColor="@color/red"
        android:textSize="@dimen/row_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shelfScrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>